--- a/home-manager/core/programs/yazi/yazi.toml
+++ b/home-manager/core/programs/yazi/yazi.toml
@@ -1,12 +1,17 @@
 [plugin]
 prepend_previewers = [
-  { name = "*.md", run = "glow" },
-  { name = "*.bin", run = "hexyl" },
+    { name = "*.md", run = "glow" },
+    { name = "*.bin", run = "hexyl" },
 ]
 append_previewers = [
-  { name = "*", run = "hexyl" },
+    { name = "*", run = "hexyl" },
+    { name = "*.csv", run = "rich-preview" },
+    { name = "*.md", run = "rich-preview" },
+    { name = "*.rst", run = "rich-preview" },
+    { name = "*.ipynb", run = "rich-preview" },
+    { name = "*.json", run = "rich-preview" },
 ]
 prepend_fetchers = [
-    { id   = "git", name = "*", run  = "git" },
-    { id   = "git", name = "*/", run  = "git" },
+    { id = "git", name = "*", run = "git" },
+    { id = "git", name = "*/", run = "git" },
 ]
