--- a/home-manager/core/programs/yazi/yazi.toml
+++ b/home-manager/core/programs/yazi/yazi.toml
@@ -4,12 +4,19 @@ prepend_previewers = [
     { name = "*.bin", run = "hexyl" },
 ]
 append_previewers = [
-    { name = "*", run = "hexyl" },
+    { name = "*.md", run = "glow" },
     { name = "*.csv", run = "rich-preview" },
-    { name = "*.md", run = "rich-preview" },
     { name = "*.rst", run = "rich-preview" },
     { name = "*.ipynb", run = "rich-preview" },
     { name = "*.json", run = "rich-preview" },
+    { mime = "application/*zip", run = "ouch" },
+    { mime = "application/x-tar", run = "ouch" },
+    { mime = "application/x-bzip2", run = "ouch" },
+    { mime = "application/x-7z-compressed", run = "ouch" },
+    { mime = "application/x-rar", run = "ouch" },
+    { mime = "application/x-xz", run = "ouch" },
+    { mime = "application/xz", run = "ouch" },
+    { name = "*", run = "hexyl" },
 ]
 prepend_fetchers = [
     { id = "git", name = "*", run = "git" },
